# mdpdf

./: .coveragerc  .gitignore  .pip-license-ignore  .pylintrc  .readthedocs.yml  CHEATSHEET.md  LICENSE  Makefile  README.md  README.rst  deprecated.txt  deprecated_find.sh  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  todo.md
docs/source/: api.rst  conf.py  development.rst  getting_started.rst  index.rst  requirements.rst
docs/source/development/: docs.rst  getting_started.rst  make.rst  publishing.rst
mdpdf/: README.md  __init__.py  cli.py  converter.py  elements.py  font.py  headfoot.py  image.py  log.py  pdf_renderer.py  properties.py  renderer.py  style.py  version.py
scripts/: clean.bat
tests/: spec_to_md.py  syntax.md  test_cli.py  test_converter.py  test_elements.py  test_example.py  test_example_files.py
tests/input/: lorem.md  quick.md  spec.txt  spec.txt.md  spec_to_md.py  syntax.md
