[metadata]
name = mdpdf
version = 0.0.12
license = MIT
author = Norman Lorrain
author_email = normanlorrain@gmail.com
description = Python command line application to convert Markdown to PDF.
long_description = file: README.md
long_description_content_type = text/markdown


# Include dependencies here https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires=
    pymupdf>=1.16.10
    commonmark>=0.9.1
    click>=7.0,<8
    

classifiers = 
    # See https://pypi.org/classifiers/
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

url = https://github.com/normanlorrain/mdpdf
# project_urls = {'Bug Tracker': 'https://github.com/pypa/sampleproject/issues'}
    


[options]
packages = find:
python_requires = >=3.8


[options.entry_points]
console_scripts =
    mdpdf = mdpdf.cli:cli

[flake8]
max-line-length  =  88
extend-ignore  =  E203 W503