[metadata]
name = mdpdf
version = 0.0.16
license = MIT
author = Norman Lorrain
author_email = normanlorrain@gmail.com
description = Python command line application to convert Markdown to PDF.
long_description = file: README.md
long_description_content_type = text/markdown




classifiers = 
    # See https://pypi.org/classifiers/
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

url = https://github.com/normanlorrain/mdpdf
# project_urls = {'Bug Tracker': 'https://github.com/pypa/sampleproject/issues'}
    

[options]
packages = find:
python_requires = >=3.8

# Include dependencies here https://packaging.python.org/discussions/install-requires-vs-requirements/
install_requires =
    pymupdf >=1.8
    commonmark >=0.9
    click >=7.1
    

[options.entry_points]
console_scripts =
    mdpdf = mdpdf.cli:cli

[flake8]
max_line_length  =  88
extend_ignore  =  E203 W503